[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/comp_Display.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Spartan.tres" type="DynamicFont" id=4]
[ext_resource path="res://Spartan_Bold.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sprites/UI/menu_white.png" type="Texture" id=6]

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_top = 1.0
margin_right = 576.0
margin_bottom = 1025.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.109804, 0.105882, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compétences" type="Label" parent="."]
margin_left = 100.16
margin_top = 6.11225
margin_right = 588.16
margin_bottom = 79.1123
custom_fonts/font = ExtResource( 4 )
text = "Compétences"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content Holder" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 88.0
margin_right = 552.0
margin_bottom = 1020.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Content Holder"]
margin_right = 528.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comp" type="ScrollContainer" parent="Content Holder"]
margin_top = 28.0
margin_right = 528.0
margin_bottom = 798.0
rect_min_size = Vector2( 528, 770 )
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiplayList" type="VBoxContainer" parent="Content Holder/Comp"]
margin_right = 528.0
margin_bottom = 770.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ColorRect2" type="ColorRect" parent="Menu"]
margin_left = -2.0
margin_right = 94.0
margin_bottom = 80.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBtn" type="TextureButton" parent="Menu"]
margin_left = 8.0
margin_right = 520.0
margin_bottom = 512.0
rect_scale = Vector2( 0.15, 0.15 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu"]
margin_left = -320.0
margin_right = -1.0
margin_bottom = 1024.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = -312.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 1016.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accueil" type="Button" parent="Menu/VBoxContainer"]
margin_right = 304.0
margin_bottom = 198.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Accueil"

[node name="Mes listes" type="Button" parent="Menu/VBoxContainer"]
margin_top = 202.0
margin_right = 304.0
margin_bottom = 400.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Mes listes"

[node name="Tous" type="Button" parent="Menu/VBoxContainer"]
margin_top = 404.0
margin_right = 304.0
margin_bottom = 603.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Tous les profils"

[node name="Scénarios" type="Button" parent="Menu/VBoxContainer"]
margin_top = 607.0
margin_right = 304.0
margin_bottom = 805.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Tous les profils"

[node name="Règles" type="Button" parent="Menu/VBoxContainer"]
margin_top = 809.0
margin_right = 304.0
margin_bottom = 1008.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Tous les profils"

[node name="TweenMenu" type="Tween" parent="Menu"]

[node name="OverWriteDialog" type="AcceptDialog" parent="."]
visible = true
margin_left = 356.736
margin_top = -128.901
margin_right = 451.736
margin_bottom = -70.901
popup_exclusive = true
window_title = "Alerte !"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="Content Holder/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Menu/MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Accueil" to="." method="_on_Accueil_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Mes listes" to="." method="_on_Mes_listes_pressed"]
